------------------------------------------------------
Version 1.10.2 - 2.2.27
------------------------------------------------------
Additions
- None

Changes
- Changed default names of backpacks so they fit in gui.
- Darkened border of iron backpack sprite.

Bug Fixes
- Fix backpack disappearing into itself.
    - Fix via moving from button upgrade via opening via right click
    - Fix via mouse wheel scrolling
    - Fix via using number keys to swap hotbar slots
------------------------------------------------------
Version 1.10.2 - 2.2.26
------------------------------------------------------
Additions
- None

Changes
- Compress images to reduce overall file size (Thanks ibmibmibm)
- Add Chinese (zh_TW) translation files (Thanks ibmibmibm)

Bug Fixes
- Fix Chinese (zh_CN) translation errors (Thanks CNife)
------------------------------------------------------
Version 1.10.2 - 2.2.25
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Hotfix for inadvertently setting drop collection in my code
------------------------------------------------------
Version 1.10.2 - 2.2.24
------------------------------------------------------
Additions
- None

Changes
- Update chinese translation file (thanks CNife)

Bug Fixes
- ExUtils compat fixed (RWTema changed to a lowercase modID, so I had to fix that in my code)
- Cleaned up death saving code to hopefully remove any issues with dying/spawning/etc.
------------------------------------------------------
Version 1.10.2 - 2.2.23
------------------------------------------------------
Additions
- None

Changes
- Much improved the Chinese translation file (thanks CNife).

Bug Fixes
- Verified the backpack stays with the player through death/gravestones when it should.
- Fix typo in lang file.
------------------------------------------------------
Version 1.10.2 - 2.2.22
------------------------------------------------------
Additions
- None

Changes